fixing link overflow

--- a/djsite/static/base.css
+++ b/djsite/static/base.css
@@ -151,15 +151,13 @@ h1 {
     margin-bottom: 15px;
 }
 
-.blog_title {
-    display: block;
-}
-
 .blog_title a {
     font-size: 17px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
+    display: block;
+    float: left;
 }
 
 .blog_info {
